--- a/symfony/.env
+++ b/symfony/.env
@@ -29,7 +29,7 @@ APP_SECRET=525fb8c5108a135a3e65e78349a30220
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://gibos:zyj4bLB9@info-titania:3306/etu_gibos"
+DATABASE_URL="mysql://E8:bonsoir123@webmin.valentinraillard.fr:6033/S3A01"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
