--- a/symfony/.env
+++ b/symfony/.env
@@ -29,7 +29,7 @@ APP_SECRET=525fb8c5108a135a3e65e78349a30220
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://root:login33160@localhost:3306/shows" 
+DATABASE_URL="mysql://vraillard:E7p48KaH@info-titania:3306/etu_vraillard" 
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
