--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-gd": "*",
         "ext-iconv": "*",
+        "amphp/http-client": "4.2.1",
         "doctrine/annotations": "^1.0",
         "doctrine/dbal": "^3.5",
         "doctrine/doctrine-bundle": "^2.8",
